Removed readings for now. Fixed bio animation covering.

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -20,7 +20,7 @@
   }
   
   img {
-    max-width: 100%;
+    max-width: 400px;
     height: 100px;
     padding-left: 10px;
   }
